--- a/charts/headlamp/Chart.yaml
+++ b/charts/headlamp/Chart.yaml
@@ -23,6 +23,9 @@ maintainers:
 version: 0.23.0
 appVersion: 0.24.1
 annotations:
+  artifacthub.io/signKey: |
+    fingerprint: @TODO: Add fingerprint
+    url: https://keybase.io/@TODO:ADD username from keybase/pgp_keys.asc
   artifacthub.io/category: monitoring-logging
   artifacthub.io/license: Apache-2.0
   artifacthub.io/screenshots: |
